# Text-Annotation-Preprocess

./: .gitignore  Makefile  main.py  pyproject.toml
src/: annotation_parser.py  constant.py  cvat_parser.py  frame_metadata.json  mask_metadata.json  metadata.json  onereward.py  remove_text.py  upload_frames.py
src/annotation/: cvat_for_video.xml
src/gcore/: __init__.py  anyuri.py  env.py  schema.py
src/gfs/: __init__.py  anyuri.py  credential.py  exceptions.py  store.py  temp.py
src/gfs/runner/: schema.py
src/gfs/utils/: gs.py  uri.py
src/sdk/: ffmpeg.py  pipeline_flux_fill_with_cfg.py
