[project]
name = "text-annotation-preprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "google-auth>=2.40.3",
    "google-cloud-storage>=3.4.0",
    "pydantic>=2.11.9",
    "ruff>=0.13.0",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers[sentencepiece]>=4.56.1",
]
